--- a/templates/index.html
+++ b/templates/index.html
@@ -53,7 +53,7 @@
             <label for="deleteorigin">Choose the origin of the fortune that you would like to delete.</label><br>
             <input type="text" id="deleteorigin" name="deleteorigin"><br>
 
-            <button name="deletefortunebutton" type="submit">Update The Fortune!</button>
+            <button name="deletefortunebutton" type="submit">Delete The Fortune!</button>
             <p>{{ fortune }}</p>
           </form>
 
