--- a/templates/index.html
+++ b/templates/index.html
@@ -61,6 +61,10 @@
         <div class="summary-container">
             <div class="bordered summary-box">
                 <p class="summary-text">This is a basic python flask web application for the fortunes.</p>
+
+                <a href="https://s3.eu-central-1.amazonaws.com/static.outworldindustries.com/testpage.html">Just a test site to check</a>
+                <a href="https://s3.eu-central-1.amazonaws.com/static.outworldindustries.com/Snr+Linux+Systems+Admin.docx">Just a linux position to check</a>
+                <img src="https://s3.eu-central-1.amazonaws.com/static.outworldindustries.com/29-lex-jurassic-park_1.jpg"></img>
             </div>
         </div>
     </div>
