--- a/templates/index.html
+++ b/templates/index.html
@@ -60,11 +60,15 @@
         </div>
         <div class="summary-container">
             <div class="bordered summary-box">
+              
                 <p class="summary-text">This is a basic python flask web application for the fortunes.</p>
 
-                <a href="https://s3.eu-central-1.amazonaws.com/static.outworldindustries.com/testpage.html">Just a test site to check</a>
-                <a href="https://s3.eu-central-1.amazonaws.com/static.outworldindustries.com/Snr+Linux+Systems+Admin.docx">Just a linux position to check</a>
+                <a href="https://s3.eu-central-1.amazonaws.com/static.outworldindustries.com/testpage.html">Click here to check out a test site!</a>
+                <br></br>
+                <a href="https://s3.eu-central-1.amazonaws.com/static.outworldindustries.com/Snr+Linux+Systems+Admin.docx">Click here to check out a Linux position!</a>
+                <br></br>
                 <img src="https://s3.eu-central-1.amazonaws.com/static.outworldindustries.com/29-lex-jurassic-park_1.jpg"></img>
+
             </div>
         </div>
     </div>
