--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
       <h1>Fortune of the Day</h1>
         <div class="fortune-container">
           
-          <form action="/addfortune/" method="post">
-            <label for="addfortune">Please write the fortune here:</label><br>
-            <input type="text" id="addfortune" name="addfortune"><br>
-            <label for="addorigin">Please write the origin here:</label><br>
-            <input type="text" id="addorigin" name="addorigin"><br>
-            <button name="addfortunebutton" type="submit">Add The Fortune!</button>
+          <form action="/createfortune/" method="post">
+            <label for="createfortune">Please write the fortune here:</label><br>
+            <input type="text" id="createfortune" name="createfortune"><br>
+            <label for="createorigin">Please write the origin here:</label><br>
+            <input type="text" id="createorigin" name="createorigin"><br>
+            <button name="createfortunebutton" type="submit">create The Fortune!</button>
           </form>
           
           <form action="/scanfortune/" method="get">
